<resources>
    <string name="app_name">Book Store App</string>
    <string name="editor_label">Add a Book</string>
    <string name="inventory">The inventory table contains: </string>
    <string name="books"> books</string>
    <string name="supplier_name">supplier name</string>
    <string name="empty_view_title_text">The shelves are empty...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="sale">sale</string>
    <string name="edit_btn">Edit</string>
    <string name="order">order more</string>

    <!-- menu item strings -->
    <string name="dummy_data">Insert Dummy Data</string>
    <string name="delete_all">Delete All Books</string>
    <string name="action_save">Save Book</string>
    <string name="action_delete">Delete Entry</string>

    <!-- editor item strings-->
    <string name="book_name">Name</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="category_overview">Overview</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price (GBP)</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_failed">Failed to add book</string>
    <string name="editor_insert_successful">New book added</string>
    <string name="editor_update_failed">Failed to update book</string>
    <string name="editor_update_successful">Book updated</string>
    <string name="editor_delete_book_failed">Failed to delete book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="unsaved_dialog_changes">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Toast strings-->
    <string name="out_of_stock">Out of stock</string>
    <string name="enter_book_name">Please enter name of book</string>
    <string name="enter_book_price">Please enter price of book in GBP</string>
    <string name="enter_book_quantity">Please enter quantity</string>
    <string name="enter_supplier_name">Please enter supplier name</string>
    <string name="enter_supplier_phone">Please enter supplier phone number</string>
    <string name="entry_error">Error saving book</string>
    <string name="book_saved">Book saved with row id: </string>
</resources>